fix: permute shift positions, not shared envelope references
The repair keyed its seat remapping by ShiftBandPair identity, on the
assumption that each agent-day carries its own envelope object. It does not:
envelopes are shared value objects drawn from the solver's value range, so
every agent on the same template and break band holds the SAME instance.
The identity map therefore collapsed those agent-days onto one entry, handing
a single agent many agents' seats and leaving the rest with none.

Caught in production by the repair's own verification on the live Saferide
desk: it found the intended improvement (usual-start matches 68 -> 235,
deviation 424h -> 103h), re-scored at 0 -> -3,327,984 hard, and rolled the
whole permutation back. No schedule was damaged, but the feature did nothing.

Now permutes POSITIONS within the substitutability class — pi[i] == j means
the agent at position i takes the envelope and seats at position j. Positions
are unique by construction and cannot collapse, whatever the envelopes alias.

The existing tests could not have caught this: every agent in them held a
distinct envelope instance, the one arrangement where the bug is invisible.
The new test puts three agents on one shared early instance and three on one
shared late instance and asserts each ends with exactly one seat, inside the
envelope it now holds.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>